2011-06-08  Raphael 'kena' Poss  <r.c.poss@uva.nl>

	Fix the `keyblit' demo.

	* demo/keyblit.c: Match the key (background), not the foreground.

2011-06-08  Raphael 'kena' Poss  <r.c.poss@uva.nl>

	Improve the LL benchmarks containing dependent loops.

	* benchmarks/livermore/kernel3.c: Use the new place identifier
	semantics from MGSim to ensure a distribution across cores.

	* benchmarks/livermore/kernel4.c: Place each dependent loop on the
	same core as its parent.

	* benchmarks/livermore/kernel6.c,
	* benchmarks/livermore/kernel23.c: Place the singleton families
	using the balanced strategy.

	* benchmarks/livermore/ll-generate.py: Include `<svp/delegate.h>'
	in the generated code.

2011-04-15  Raphael 'kena' Poss  <r.c.poss@uva.nl>

	Improve the `matmul' benchmark.

	* matmul/simple.c: Use work interval number 1, as per the latest
	Unibench benchmark spec.

2011-04-15  Raphael 'kena' Poss  <r.c.poss@uva.nl>

	Improve the `matmul' benchmark.

	* matmul/simple.c: Ensure that each multiply phase has an output
	matrix distinct from the input.
	
	* matmul/Makefile.am (.c.tar): Add a rule to generate Unibench
	archives.

	* matmul/input.d10,
	* matmul/input.d30: Define less iterations and sane values to
	avoid overflows.

2011-03-28  Raphael 'kena' Poss  <r.c.poss@uva.nl>

	Minor SEP-related changes.

	* benchmarks/livermore/ll-generate.py: Do not use the arity field
	in the place information structure if the place is atomic.
	
	* programs/demo/sep.c: Cast places to `long' before printing.

2011-03-27  Raphael 'kena' Poss  <r.c.poss@uva.nl>

	Adjust programs that use the SEP to adapt to the new interface.

	* programs/benchmarks/benchmarks.h: `union placeinfo' instead of
	`struct placeinfo'.

	* programs/benchmarks/benchmarks.c: Use the new SEP interface. Use
	the new query interface to extract the number of cores.

	* programs/demo/sep.c,
	* programs/benchmarks/mandel/mandel.c,
	* programs/benchmarks/livermore/ll-generate.py: Use the new interface.
	