@@ -1,2 +1,2 @@
-150 100 32 0
+100 100 32 0
 [0,3: -2.5 2.5 -2.5 2.5]
