@@ -2,4 +2,4 @@
 #include "ca1d.c"
 #include "ca1d_main.c"
 
-// SLT_RUN: rule=60 width=30 init=1 iters=30 print=1
+// SLT_RUN: rule=60 init=1 print=1
